--- a/codeFanaticsProject/src/app/admin/edit-questions/edit-questions.component.html
+++ b/codeFanaticsProject/src/app/admin/edit-questions/edit-questions.component.html
@@ -1,1 +1,152 @@
-<p>edit-questions works!</p>
+<div class="container p-5">
+    <div class="col-md-12 questionEditorPar bg-bodyBlue h-100 p-5 overflow-auto">
+        <div class="editQuestions">
+            <div class="question">
+                <div class="col-md-12 mb-3">
+                    <div class="row d-flex w-100">
+                        <div class="col-md-1  d-flex justify-content-center flex-column">
+                            <div class="actionBtns">
+                                <div>
+                                    <i class="fa fa-trash bg-danger rounded-circle mb-2"></i>
+                                </div>
+                                <div>
+                                    <i class="fa fa-arrow-up bg-green rounded-circle mb-2"></i>
+                                </div>
+                                <div>
+                                    <i class="fa fa-arrow-down bg-green rounded-circle mb-2"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="desc">
+                                <img src="images/Image.png" alt="" class="img-fluid h-100 position-absolute">
+                            </div>
+                        </div>
+                        <div class="col-md-5 mainQuestionPar d-flex justify-content-center flex-column">
+                            <div class="mainQuestion bg-darkBlue">
+                                <p>
+                                    Who was the first person to walk on the moon?
+                                </p>
+                            </div>
+                            <div class="questionLink p-2 bg-darkBlue mt-2 rounded">
+                                <a href="#" class="text-white">https://www.sciencealert.com/images...</a>
+                            </div>
+                        </div>
+                        <div class="col-md-2  d-flex justify-content-center flex-column">
+                            <div class="opts1 bg-darkBlue p-2 rounded">
+                                <span>abcd</span>
+                            </div>
+                            <div class="opts bg-darkBlue p-2 rounded">
+                                <span>abcd</span>
+                            </div>
+                        </div>
+                        <div class="col-md-2 d-flex justify-content-center flex-column">
+                            <div class="opts1 bg-darkBlue p-2 rounded">
+                                <span>abcd</span>
+                            </div>
+                            <div class="opts bg-darkBlue p-2 rounded">
+                                <span>abcd</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 mb-3">
+                    <div class="row d-flex w-100">
+                        <div class="col-md-1  d-flex justify-content-center flex-column">
+                            <div class="actionBtns">
+                                <div>
+                                    <i class="fa fa-trash bg-danger rounded-circle mb-2"></i>
+                                </div>
+                                <div>
+                                    <i class="fa fa-arrow-up bg-green rounded-circle mb-2"></i>
+                                </div>
+                                <div>
+                                    <i class="fa fa-arrow-down bg-green rounded-circle mb-2"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="desc">
+                                <img src="images/Image.png" alt="" class="img-fluid h-100 position-absolute">
+                            </div>
+                        </div>
+                        <div class="col-md-5 mainQuestionPar d-flex justify-content-center flex-column">
+                            <div class="mainQuestion bg-darkBlue">
+                                <p>
+                                    Who was the first person to walk on the moon?
+                                </p>
+                            </div>
+                            <div class="questionLink p-2 bg-darkBlue mt-2 rounded">
+                                <a href="#" class="text-white">https://www.sciencealert.com/images...</a>
+                            </div>
+                        </div>
+                        <div class="col-md-2  d-flex justify-content-center flex-column">
+                            <div class="opts1 bg-darkBlue p-2 rounded">
+                                <span>abcd</span>
+                            </div>
+                            <div class="opts bg-darkBlue p-2 rounded">
+                                <span>abcd</span>
+                            </div>
+                        </div>
+                        <div class="col-md-2 d-flex justify-content-center flex-column">
+                            <div class="opts1 bg-darkBlue p-2 rounded">
+                                <span>abcd</span>
+                            </div>
+                            <div class="opts bg-darkBlue p-2 rounded">
+                                <span>abcd</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="row d-flex w-100">
+                        <div class="col-md-1  d-flex justify-content-center flex-column">
+                            <div class="actionBtns">
+                                <div>
+                                    <i class="fa fa-trash bg-danger rounded-circle mb-2"></i>
+                                </div>
+                                <div>
+                                    <i class="fa fa-arrow-up bg-green rounded-circle mb-2"></i>
+                                </div>
+                                <div>
+                                    <i class="fa fa-arrow-down bg-green rounded-circle mb-2"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="desc">
+                                <img src="images/Image.png" alt="" class="img-fluid h-100 position-absolute">
+                            </div>
+                        </div>
+                        <div class="col-md-5 mainQuestionPar d-flex justify-content-center flex-column">
+                            <div class="mainQuestion bg-darkBlue">
+                                <p>
+                                    Who was the first person to walk on the moon?
+                                </p>
+                            </div>
+                            <div class="questionLink p-2 bg-darkBlue mt-2 rounded">
+                                <a href="#" class="text-white">https://www.sciencealert.com/images...</a>
+                            </div>
+                        </div>
+                        <div class="col-md-2  d-flex justify-content-center flex-column">
+                            <div class="opts1 bg-darkBlue p-2 rounded">
+                                <span>abcd</span>
+                            </div>
+                            <div class="opts bg-darkBlue p-2 rounded">
+                                <span>abcd</span>
+                            </div>
+                        </div>
+                        <div class="col-md-2 d-flex justify-content-center flex-column">
+                            <div class="opts1 bg-darkBlue p-2 rounded">
+                                <span>abcd</span>
+                            </div>
+                            <div class="opts bg-darkBlue p-2 rounded">
+                                <span>abcd</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
