--- a/codeFanaticsProject/src/styles.scss
+++ b/codeFanaticsProject/src/styles.scss
@@ -1,30 +1,45 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~bootstrap/dist/css/bootstrap.min.css';
-@import '~font-awesome/css/font-awesome.min.css';
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@import "~font-awesome/css/font-awesome.min.css";
 body {
-    background-color: #bde7ff;
-    font-family: "Verdana";
+  background-color: #bde7ff;
+  font-family: "Verdana";
 }
- /* width */
- ::-webkit-scrollbar {
-    width: 10px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1;
-    border-top-right-radius: 16px;
-    border-bottom-right-radius: 16px;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #888;
-    border-top-right-radius: 17px;
-    border-bottom-right-radius: 17px;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555;
-  } 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-top-right-radius: 16px;
+  border-bottom-right-radius: 16px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-top-right-radius: 17px;
+  border-bottom-right-radius: 17px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+.bg-mainBlue {
+  background-color: #56ccf2;
+}
+.bg-bodyBlue {
+  background-color: #38a4c9;
+}
+.bg-green {
+  background-color: #b8f98c;
+}
+.bg-red {
+  background-color: #ff0000;
+}
+.bg-darkBlue {
+  background-color: #a0a0a0;
+}
