--- a/src/app/admin/edit-questions/edit-questions.component.html
+++ b/src/app/admin/edit-questions/edit-questions.component.html
@@ -19,7 +19,7 @@
                         </div>
                         <div class="col-md-2">
                             <div class="desc">
-                                <img src="images/Image.png" alt="" class="img-fluid h-100 position-absolute">
+                                <img src="assets/images/Image.png" alt="" class="img-fluid ">
                             </div>
                         </div>
                         <div class="col-md-5 mainQuestionPar d-flex justify-content-center flex-column">
@@ -67,7 +67,7 @@
                         </div>
                         <div class="col-md-2">
                             <div class="desc">
-                                <img src="images/Image.png" alt="" class="img-fluid h-100 position-absolute">
+                                <img src="assets/images/Image.png" alt="" class="img-fluid ">
                             </div>
                         </div>
                         <div class="col-md-5 mainQuestionPar d-flex justify-content-center flex-column">
@@ -115,7 +115,7 @@
                         </div>
                         <div class="col-md-2">
                             <div class="desc">
-                                <img src="images/Image.png" alt="" class="img-fluid h-100 position-absolute">
+                                <img src="assets/images/Image.png" alt="" class="img-fluid ">
                             </div>
                         </div>
                         <div class="col-md-5 mainQuestionPar d-flex justify-content-center flex-column">
